# HPCCitationNetwork

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.json
docs/: future_features.md  methods.md
scripts/: parse_seeds.py
src/data/: collector.py  endnote_parser.py  manual_seeds.py  openalex_client.py  seed_import.py  storage.py
src/network/: builder.py
src/viz/: plots.py
tests/: conftest.py  test_builder.py  test_collector.py  test_collector_batch.py  test_dashboard_functions.py  test_data_sanity.py  test_endnote_parser.py  test_openalex_batch.py  test_openalex_client.py  test_seed_import.py  test_storage.py  test_viz_plots.py
